editlayer: fix checkboxes not showing up in Chromium
Somehow due to some CSS shenanigans these checkboxes had 0 width in
Chromium and thus were invisible. A style on the td had to be used
because a style on the input doesn't seem to fix it.

--- a/layerindex/static/css/additional.css
+++ b/layerindex/static/css/additional.css
@@ -68,7 +68,7 @@ padding: 8px;
     padding: 4px;
 }
 
-.scrolling checkbox, label {
+.scrolling label {
     margin: 0px;
 }
 
@@ -82,6 +82,10 @@ padding: 8px;
 
 .formfields textarea {
     width: 50%;
+}
+
+.checkboxtd input {
+    width: 25px;
 }
 
 #maintainers {
